--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/platform-express": "^7.6.15",
     "mongoose": "^7.0.3",
     "reflect-metadata": "^0.1.13",
+    "request-ip": "^2.1.3",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.6"
   },
@@ -40,6 +41,7 @@
     "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^4.19.0",
     "@typescript-eslint/parser": "^4.19.0",
+    "dotenv": "6.0.0",
     "eslint": "^7.22.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-prettier": "^3.3.1",
