--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/mongoose": "^9.2.2",
     "@nestjs/platform-express": "^7.6.15",
+    "class-validator": "^0.14.0",
     "mongoose": "^7.0.3",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^2.1.3",
