--- a/package.json
+++ b/package.json
@@ -25,10 +25,14 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/mongoose": "7.2.4",
     "@nestjs/platform-express": "^7.6.15",
+    "@types/cache-manager": "^4.0.2",
     "cache-manager": "^5.2.0",
+    "cache-manager-redis-yet": "^4.1.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
+    "moment-timezone": "^0.5.42",
     "mongoose": "^7.0.3",
+    "redis": "^4.4.0",
     "reflect-metadata": "^0.1.13",
     "request-ip": "^2.1.3",
     "rimraf": "^3.0.2",
