--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "friendly-potato",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "version": "1.0.0",
+  "description": "Friendly Potato API",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -12,7 +11,7 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
+    "start:prod": "nest start",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -25,9 +24,11 @@
     "@nestjs/core": "^7.6.15",
     "@nestjs/mongoose": "7.2.4",
     "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/swagger": "^4.8.2",
     "@types/cache-manager": "^4.0.2",
-    "cache-manager": "^5.2.0",
+    "cache-manager": "^4.1.0",
     "cache-manager-redis-yet": "^4.1.1",
+    "calculate-distance-between-coordinates": "^1.0.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "moment-timezone": "^0.5.42",
@@ -36,12 +37,13 @@
     "reflect-metadata": "^0.1.13",
     "request-ip": "^2.1.3",
     "rimraf": "^3.0.2",
-    "rxjs": "^6.6.6"
+    "rxjs": "^6.6.6",
+    "swagger-ui-express": "^4.6.2"
   },
   "devDependencies": {
     "@nestjs/cli": "^7.6.0",
     "@nestjs/schematics": "^7.3.0",
-    "@nestjs/testing": "^7.6.15",
+    "@nestjs/testing": "^7.6.18",
     "@types/estree": "^1.0.0",
     "@types/express": "^4.17.11",
     "@types/jest": "^26.0.22",
